frontend/src/components/Navbar.module.css
.sticky_navbar {
  position: sticky;
  top: 0;
  z-index: 3;
}

nav > .nav_brand {
  padding-top: 0;
  padding-bottom: 0;
}

.nav_logo {
  font-size: 1.6rem;
}

.navbar_me {
  padding-left: 1rem;
  height: 40px;
  display: flex;
}

.navbar_dark_mode_btn {
  padding-right: 1rem !important;
  transition: 0.1s;
}

.navbar_dark_mode_btn:hover {
  cursor: pointer;
  color: #007bff;
}

.icon_circle {
  width: 30px;
  height: 30px;
  border-radius: 15px;
  display: flex;
  transition: 0.3s;
}

.icon_circle:hover {
  color: #007bff;
  cursor: pointer;
}

.search_bar_mid {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0%);
  width: calc(120px + 30vw);
}

.search_bar_relative {
  margin: 0 1rem;
  /* width: 30vw;  */
  width: 26vw;
}

